--- a/Assets/Resources/gameConfig.json
+++ b/Assets/Resources/gameConfig.json
@@ -1,1 +1,8 @@
-{"ErrorSoundEnabled":true,"ErrorScreenShakeEnabled":true,"ErrorScreenShakeDuration":0.15000000596046449,"ErrorScreenShakeStrength":10.0,"ErrorScreenShakeShakesAmount":10}
+{
+    "CorrectSoundEnabled": true,
+    "ErrorSoundEnabled": true,
+    "ErrorScreenShakeEnabled": true,
+    "ErrorScreenShakeDuration": 0.15000000596046449,
+    "ErrorScreenShakeStrength": 10.0,
+    "ErrorScreenShakeShakesAmount": 10
+}
